ecmascript/parser/tests/test262-error-references/fail/3162394f5bc07198.js.stderr
error: Expected ;, got )
 --> $DIR/tests/test262-parser/fail/3162394f5bc07198.js:1:21
  |
1 | for(const a = 0 in b);
  |                     ^

